--- a/.github/workflows/ci-docker-make.yml
+++ b/.github/workflows/ci-docker-make.yml
@@ -40,12 +40,15 @@ jobs:
         #path: "Build/stm32_executable.elf"        
     
   compile:
-    name: Compile site assets
     runs-on: ubuntu-latest
+    permissions:
+      packages: write
+      contents: read
     steps:
-      - name: Check out the repo
+      - name: Checkout the repository
         uses: actions/checkout@v3
-      - uses: docker/build-push-action@v4
+      - name: docker build push action
+        uses: docker/build-push-action@v4
         with:
           tags: jamie-holland-imi/gitdocker:latest
           push: false
@@ -57,12 +60,14 @@ jobs:
             run: |
               make
               ls
-      - run: ls
-      - name: Upload Elf and Hex file from Docker Image
-        uses: actions/upload-artifact@v3
-        with:
-          name: BuildFiles
-          path: |
-            ./*.elf
-            #stm32_executable*.hex
-          retention-days: 1
+      - name: Run LS in Build
+        run: ls
+        working-directory: ./Build
+      #- name: Upload Elf and Hex file from Docker Image
+        #uses: actions/upload-artifact@v3
+        #with:
+          #name: BuildFiles
+          #path: |
+            #./*.elf
+            ##stm32_executable*.hex
+          #retention-days: 1
