--- a/.github/workflows/ci-docker-make.yml
+++ b/.github/workflows/ci-docker-make.yml
@@ -66,7 +66,7 @@ jobs:
               make
               ls
               #cp -p -f stm32_executable.elf ${{ runner.temp }}/build_files
-              copy -p stm32_executable.elf > ${{ runner.temp }}/build_files/
+              #copy -p stm32_executable.elf > ${{ runner.temp }}/build_files/
               
       - name: Run LS
         run: ls
