--- a/.github/workflows/ci-docker-make.yml
+++ b/.github/workflows/ci-docker-make.yml
@@ -71,7 +71,8 @@ jobs:
       - name: Run LS
         run: ls
         #working-directory: /
-        
+      - run: docker ps
+      - run: docker cp jamie-holland-imi/gitdocker:latest:/src/. stm32_executable.elf
       - name: Upload Elf and Hex file from Docker Image
         uses: actions/upload-artifact@v3
         with:
